<resources>
    <string name="app_name">MyMM131</string>
    <string name="privatePhoto">私照</string>
    <string name="index_video">视频</string>
    <string name="index_collect">收藏</string>
    <string name="index_mine">我的</string>
    <string name="hot">最热</string>
    <string name="photo_new">最新</string>
    <string name="log_in">点击登陆</string>
    <string name="small_img">小图浏览</string>
    <string name="private_protect">隐私保护</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="recent_look">最近浏览</string>
    <string name="more_setting">更多设置</string>
    <string name="private_mm31">开启后，输入密码才能查看真实的MM31</string>
    <string name="click">点击开启即表示同意用户协议</string>
    <string name="isFirst">isFirst</string>

    <string name="title_activity_detail_photo">DetailPhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="photo">photo</string>
    <string name="network_error">网络连接异常，请连接网络哦·</string>
    <string name="loadend">没有图片了哦</string>
    <string name="loading">正在加载。。。</string>
    <string name="update">立即更新</string>
    <string name="findversion">发现新版本</string>
    <string name="comment_if_like">喜欢就评论吧</string>
    <string name="proxy_connect">网络连接失败，请关闭或打开代理</string>
    <string name="connect_failed">网络连接失败，请检查网络</string>
    <string name="free_and_load">松手加载</string>
    <string name="sum_num">/%d</string>
    <string name="num">%d</string>
    <string name="num_w">%sw</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="collect">收藏</string>
    <string name="report">举报</string>
    <string name="comment_time">%d月</string>
    <string name="send">发送</string>
    <string name="img_num">%dP</string>
    <string name="guanggao">广告</string>
    <string name="close">关闭</string>
    <string name="dialog_title">登陆你的MM131,体验更多精彩瞬间</string>
    <string name="input_num">请输入手机号码</string>
    <string name="input_verify">请输入验证码</string>
    <string name="other_way">其他方式登录</string>
    <string name="sina">sina</string>
    <string name="qq">qq</string>
    <string name="wechat">wechat</string>
    <string name="mm131">登录即代表您同意MM131服务和隐私条款</string>
    <string name="cancel">取消</string>
    <string name="report_success">举报成功</string>
    <string name="play_n_count">播放%d次</string>
    <string name="video_n_count">%d次播放</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="search_img_video">搜索私照/视频</string>
    <string name="search_by_content">搜索指定内容</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_img">搜索私照</string>
    <string name="search_video">搜索视频</string>
</resources>
