<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#00000000"
        android:button="@null"
        android:checked="true"
        android:drawableTop="@drawable/index_photo"
        android:text="@string/privatePhoto"
        android:textAlignment="center" />

    <RadioButton
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#00000000"
        android:button="@null"
        android:drawableTop="@drawable/index_video"
        android:text="@string/index_video"
        android:textAlignment="center" />

    <RadioButton
        android:id="@+id/collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="#00000000"
        android:button="@null"
        android:drawableTop="@drawable/index_collect"
        android:text="@string/index_collect"
        android:textAlignment="center" />

    <RadioButton
        android:id="@+id/mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#00000000"
        android:button="@null"
        android:drawableTop="@drawable/index_mine"
        android:gravity="center_horizontal"
        android:text="@string/index_mine"
        android:textAlignment="center" />

</RadioGroup>
