<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_160"
        android:background="@mipmap/mine_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/loggo"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_margin="@dimen/photo_list_divider_height"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@mipmap/chat_avatar_normal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/photo_list_divider_height"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/small_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_small_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/small_img"
            android:text="@string/small_img"
            android:textSize="@dimen/sp_15"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/photo_list_divider_height"
            android:switchMinWidth="@dimen/dp_25"
            android:textOff=""
            android:textOn=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/private_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_lock" />

        <TextView
            android:id="@+id/private_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_centerVertical="true"
            android:text="@string/private_protect"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/private_img"
            android:layout_toEndOf="@id/private_img"
            android:text="@string/private_mm31"
            android:textSize="@dimen/sp_10" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/photo_list_divider_height"
            android:checked="true"
            android:switchMinWidth="@dimen/dp_25"
            android:textOff=""
            android:textOn=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/photo_list_divider_height"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/version_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:background="@android:color/white"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/version_update"
            android:text="@string/version_update"
            android:textSize="@dimen/sp_15"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_browsing_recommend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/feedback"
            android:text="@string/feedback"
            android:textSize="@dimen/sp_15"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/photo_list_divider_height"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/recent_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_browsing_history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/recent_look"
            android:text="@string/recent_look"
            android:textSize="@dimen/sp_15"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/more_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/photo_list_divider_height"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/more_setting"
            android:text="@string/more_setting"
            android:textSize="@dimen/sp_15"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

</LinearLayout>