<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/img_video"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/search_by_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@color/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:gravity="center_horizontal"
        android:text="@string/index_video"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <Button
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:gravity="center_horizontal"
        android:text="@string/privatePhoto"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <GridView
        android:id="@+id/grid_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:horizontalSpacing="@dimen/dp_10"
        android:numColumns="5"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <GridView
        android:id="@+id/grid_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:horizontalSpacing="@dimen/dp_10"
        android:numColumns="5"
        app:layout_constraintTop_toBottomOf="@+id/grid_img" />
</android.support.constraint.ConstraintLayout>