<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <cn.jzvd.JZVideoPlayerStandard
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_player">

        <ImageView
            android:id="@+id/img_commend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:contentDescription="@string/comment"
            android:src="@mipmap/icon_video_commend" />

        <TextView
            android:layout_width="@dimen/dp_18"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_3"
            android:hint="@string/comment"

            android:textSize="@dimen/sp_8" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:contentDescription="@string/praise"
            android:src="@mipmap/icon_video_praise" />

        <TextView
            android:id="@+id/praise_num"
            android:layout_width="@dimen/dp_18"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_3"

            android:textSize="@dimen/sp_8" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:contentDescription="@string/collect"
            android:src="@mipmap/icon_video_collection_n" />

        <TextView
            android:id="@+id/collect_num"
            android:layout_width="@dimen/dp_18"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:textSize="@dimen/sp_8" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_15"
        android:contentDescription="@string/collect"
        android:src="@mipmap/video_icon_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_player" />
</android.support.constraint.ConstraintLayout>